# MedicalReportsGenerator

./: .gitignore  LICENSE.md  README.md  TODO.md  docs.md  pyproject.toml  reports_format.md
.github/workflows/: main.yml
medicalrecordgenerator/: __main__.py  med_record1.txt  med_record2.txt  med_record3.txt  med_record4.txt  med_record5.txt  med_record6.txt  med_record7.txt  records
medicalrecordgenerator/app/: app_operations.py  generator.py  language.py  parser.py
medicalrecordgenerator/data/: anonymized_data.csv  anonymized_data_edited.csv  data_objects.py  language.py  models.py  parser.py  parser_old.py  subject_storage.py  test_database.xlsx  test_language.py
medicalrecordgenerator/generator/: generator.py  generator_helpers.py
medicalrecordgenerator/locales/: cs_CZ.json  en_US-different.json  en_US.json  en_US_old.json  test.json  ukazka.json
medicalrecordgenerator/old/: parser.py  test.py
medicalrecordgenerator/templates/: main.txt
medicalrecordgenerator/tests/: __main__.py  definitions.py  test.py  test_generator.py  test_rest.py
medicalrecordgenerator/utils/: db_operations.py  load_csv_utils.py  load_utils.py  queries.py
medicalreportsgenerator/: __main__.py
medicalreportsgenerator/app/: app_operations.py  generator.py  language.py
medicalreportsgenerator/data/: data_objects.py  models.py  subject_storage.py
medicalreportsgenerator/tests/: test_generator.py  test_language.py  test_rest.py
medicalreportsgenerator/utils/: definitions.py  load_csv_utils.py  load_language_utils.py  queries.py
unit/: test_generator.py
(+19 files in other folders)
