[tool.poetry]
name = "medicalreportsgenerator"
version = "0.2.0"
description = "Project for bachelors thesis"
authors = ["Tomas Stucka <Tomas00217@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.5"
pandas = "^1.5.3"
dict-to-dataclass = "^0.0.8"
jinja2 = "^3.1.2"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
